PR/47704: Takahiro HAYASHI: Add -L flag